Update Keycloak version: 20.0.5 -> 21.0.2